ordre de compilation des modules

--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,14 @@
   <version>0.0.1-SNAPSHOT</version>
   <packaging>pom</packaging>
   <modules>
-  	<module>Game</module>
-  	<module>Plugins</module>
   	<module>PluginsInterfaces</module>
+  	<module>Plugins</module>
+  	<module>Game</module>
   </modules>
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+  </properties>
 </project>
+
